--- a/views/packages.html
+++ b/views/packages.html
@@ -1,35 +1,18 @@
-<section class="packages-main">
+<section class="packages-main" ng-repeat="city in cities">
     <!-- This is where we need to repeat over our data that we are getting from our controller. The controller is getting the data from the service
      If you haven't made teh controller do that now and include it on your state object in app.js-->
     <section class="package-card">
         <!-- Once we have the data we can use {{}} to bind that data to our view -->
         <!--Add the image link from the data here. Remember to put something in the alt tag, perhaps the name of the city-->
-        <img  alt="">
+        <img  ng-src="{{city.image}}" alt="">
         <!-- Now we can start to extract the data and bind it to our different elements here-->
-        <h6> <!--The city name goes here--> </h6>
-        <h1><!--The country name goes here--></h1>
-        <p><!--The description goes here--></p>
+        <h6> {{city.city}} <!--The city name goes here--> </h6>
+        <h1> {{city.country}} <!--The country name goes here--></h1>
+        <p> {{city.desc}} <!--The description goes here--></p>
 
         <!--You will need to make the ui-sref work. It should point to the booked state. If you look at your app.js the booked state
        is expecting an id to be passed along You can get that id from the data object that we are repeating over -->
-        <button>Book Now</button>
+        <button><a ui-sref="booked({id: '{{city.id}}'})">Book Now</a></button>
     </section>
 </section>
 
-
-<section class="location-card" >
-    <div class="image-container">
-        <!-- Once we have the data we can use {{}} to bind that data to our view -->
-        <!--Add the image link from the data here-->
-        <img src="" alt="">
-    </div>
-    <div class="location-inner-left">
-        <!-- Now we can start to extract the data and bind it to our different elements here-->
-        <h6> <!--The city name goes here--> </h6>
-        <h1><!--The country name goes here--></h1>
-        <p><!--The description goes here--></p>
-    </div>
-    <div class="location-inner-right">
-        <h3>Package Start At $<!--The package price goes here--></h3>
-        <!--You will need to make the ui-sref work. It should point to the booked state. If you look at your app.js the booked state
-        is expecting an id to be passed along You can get that id from the data object that we are repeating over -->
